Revert "Try failure case"
This reverts commit cd4e5b6a11d110be79f28cd706ca29824817d6df.

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -139,7 +139,7 @@ jobs:
             resource_class: xlarge
         steps:
             - install-dependencies-and-checkout
-            - run: cargo doc --no-deps --all-features
+            - run: cargo doc --no-deps
 
 parameters:
     crates:
