Add documentation build check to CircleCI (#710)
* Add CI check to see if documentation builds

* Try failure case

* Revert "Try failure case"

This reverts commit cd4e5b6a11d110be79f28cd706ca29824817d6df.

* Add back other build steps

* Remove `vercel` build profile

* Remove `Makefile`

This was used by Vercel for building documentation. We're going to stop using Vercel
for this, so we can get rid of the `Makefile`.

* Update `README` with new doc build instructions

* Fix wording of doc link

Co-authored-by: Vi P <129776839+vitropy@users.noreply.github.com>

* Use more direct languge

Co-authored-by: Vi P <129776839+vitropy@users.noreply.github.com>

---------

Co-authored-by: Vi P <129776839+vitropy@users.noreply.github.com>

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -133,6 +133,13 @@ jobs:
             - install-dependencies-and-checkout
             - build
             - release
+    check-doc-build:
+        machine:
+            image: ubuntu-2204:2022.10.2
+            resource_class: xlarge
+        steps:
+            - install-dependencies-and-checkout
+            - run: cargo doc --no-deps
 
 parameters:
     crates:
@@ -164,3 +171,6 @@ workflows:
                 - << pipeline.parameters.pallets >>
                 - << pipeline.parameters.runtime >>
                 - pipeline.parameters.crates
+    documentation:
+        jobs:
+            - check-doc-build
