Add device key program to initial chainstate (#680)
* add device key program to inital chianstate

* first pass device key test

* add config to device key proxy

* changelog

* lint

* metadata

* add aux data

* Apply suggestions from code review

Co-authored-by: peg <peg@magmacollective.org>

* lint

---------

Co-authored-by: peg <peg@magmacollective.org>

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -82,6 +82,8 @@ lazy_static          ="1.4.0"
 entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 blake3               ="1.5.1"
 ethers-core          ="2.0.14"
+schnorrkel           ={ version="0.9.1", default-features=false, features=["std"] }
+schemars             ={ version="0.8.16" }
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
