--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -19,6 +19,7 @@ sp-runtime ={ version="28.0.0", default-features=false, optional=true }
 sp-std     ={ version="12.0.0", default-features=false }
 lazy_static={ version="1.4.0", features=["spin_no_std"] }
 hex-literal="0.3.4"
+sp-core    ={ version="25.0.0", default-features=false }
 
 [features]
 default    =["std"]
