--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -38,15 +38,13 @@ axum             ={ version="0.7.5", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.21.0", optional=true }
 
 # Used only with the `wasm` feature
-gloo-net={ version="0.5.0", default-features=false, features=["websocket"], optional=true }
+gloo-net            ={ version="0.5.0", default-features=false, features=["websocket"], optional=true }
 wasm-bindgen-futures={ version="0.4.42", optional=true }
-wasm-bindgen={ version="0.2.92", optional=true }
-wasm-bindgen-derive={ version="0.2", optional=true }
-js-sys={ version="0.3.69", optional=true }
-base64={ version="0.22.0", optional=true }
-schnorrkel={ version="0.11.4", default-features=false, features=[
-  "std",
-], optional=true }
+wasm-bindgen        ={ version="0.2.92", optional=true }
+wasm-bindgen-derive ={ version="0.2", optional=true }
+js-sys              ={ version="0.3.69", optional=true }
+base64              ={ version="0.22.0", optional=true }
+schnorrkel          ={ version="0.11.4", default-features=false, features=["std"], optional=true }
 
 [dev-dependencies]
 sp-keyring="31.0.0"
