--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -13,8 +13,8 @@ async-trait        ="0.1.76"
 entropy-shared     ={ path="../shared", default-features=false }
 synedrion          ="0.1"
 serde              ={ version="1.0", features=["derive"], default-features=false }
-subxt              ={ version="0.32.1", default-features=false }
-sp-core            ={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
+subxt              ={ version="0.34.0", default-features=false }
+sp-core            ={ version="28.0.0", default-features=false, features=["full_crypto", "serde"] }
 tokio              ={ version="1.36", features=["sync", "rt", "macros"] }
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 futures            ="0.3"
@@ -38,19 +38,16 @@ axum             ={ version="0.7.5", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.21.0", optional=true }
 
 # Used only with the `wasm` feature
-gloo-net={ version="0.5.0", default-features=false, features=["websocket"], optional=true }
+gloo-net            ={ version="0.5.0", default-features=false, features=["websocket"], optional=true }
 wasm-bindgen-futures={ version="0.4.42", optional=true }
-wasm-bindgen={ version="0.2.92", optional=true }
-wasm-bindgen-derive={ version="0.2", optional=true }
-js-sys={ version="0.3.69", optional=true }
-base64={ version="0.22.0", optional=true }
-schnorrkel={ version="0.9.1", default-features=false, features=[
-  "std",
-  "wasm-bindgen",
-], optional=true }
+wasm-bindgen        ={ version="0.2.92", optional=true }
+wasm-bindgen-derive ={ version="0.2", optional=true }
+js-sys              ={ version="0.3.69", optional=true }
+base64              ={ version="0.22.0", optional=true }
+schnorrkel          ={ version="0.11.4", default-features=false, features=["std"], optional=true }
 
 [dev-dependencies]
-sp-keyring="24.0.0"
+sp-keyring="31.0.0"
 
 [features]
 default=["server"]
