--- a/crates/test-cli/Cargo.toml
+++ b/crates/test-cli/Cargo.toml
@@ -11,11 +11,11 @@ edition   ='2021'
 entropy-testing-utils={ path="../testing-utils" }
 clap                 ={ version="4.4.6", features=["derive"] }
 colored              ="2.0.4"
-subxt                ={ version="0.32.1" }
-sp-core              ="21.0.0"
+subxt                ="0.34.0"
+sp-core              ="28.0.0"
 anyhow               ="1.0.81"
 tokio                ={ version="1.16", features=["macros", "rt-multi-thread", "io-util", "process"] }
 hex                  ="0.4.3"
 bincode              ="1.3.3"
 x25519-dalek         ="2.0.1"
-sp-runtime           ={ version="24.0.0", default-features=false }
+sp-runtime           ={ version="28.0.0", default-features=false }
