--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -34,9 +34,9 @@ axum       ={ version="0.7.5", features=["ws"] }
 axum-macros="0.4.1"
 
 # Substrate
-subxt             ={ version="0.32.1" }
+subxt             ="0.34.0"
 parity-scale-codec="3.6.9"
-sp-core           ={ version="21.0.0", default-features=false }
+sp-core           ={ version="28.0.0", default-features=false }
 
 # Entropy
 entropy-shared  ={ path="../shared" }
@@ -75,7 +75,7 @@ entropy-testing-utils={ path="../testing-utils" }
 serial_test          ="0.8.0"
 hex-literal          ="0.3.4"
 project-root         ="0.2.2"
-sp-keyring           ="24.0.0"
+sp-keyring           ="31.0.0"
 more-asserts         ="0.3.1"
 template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
 lazy_static          ="1.4.0"
