--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -15,11 +15,11 @@ serde_derive="1.0.147"
 strum       ="0.25.0"
 strum_macros="0.25.3"
 
-sp-runtime = { version = "32.0.0", default-features = false, optional = true }
-sp-std     = { version = "14.0.0", default-features = false }
+sp-runtime ={ version="32.0.0", default-features=false, optional=true, features=["serde"] }
+sp-std     ={ version="12.0.0", default-features=false }
 lazy_static={ version="1.4.0", features=["spin_no_std"] }
 hex-literal="0.3.4"
-sp-core    = { version = "29.0.0", default-features = false }
+sp-core    ={ version="28.0.0", default-features=false }
 
 [features]
 default    =["std"]
