update to new chainspec type development

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -42,6 +42,7 @@ sp-std                ={ version="14.0.0", default-features=false }
 sp-storage            ={ version="20.0.0", default-features=false, optional=true }
 sp-transaction-pool   ={ version="27.0.0", default-features=false }
 sp-version            ={ version="30.0.0", default-features=false }
+sp-genesis-builder    ={ version="0.8.0", default-features=false }
 
 # FRAME Dependencies
 frame-benchmarking             ={ version="29.0.0", default-features=false, optional=true }
@@ -175,6 +176,7 @@ std=[
   "sp-consensus-babe/std",
   "sp-core/std",
   "sp-inherents/std",
+  "sp-genesis-builder/std",
   "sp-io/std",
   "sp-keyring",
   "sp-npos-elections/std",
