--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -15,7 +15,7 @@ synedrion          ="0.1"
 serde              ={ version="1.0", features=["derive"], default-features=false }
 subxt              ={ version="0.34.0", default-features=false }
 sp-core            ={ version="28.0.0", default-features=false, features=["full_crypto", "serde"] }
-tokio              ={ version="1.36", features=["sync", "rt", "macros", "rt-multi-thread"] }
+tokio              ={ version="1.36", features=["sync", "rt", "macros"] }
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 futures            ="0.3"
 hex                ="*"
@@ -58,6 +58,7 @@ server=[
   "entropy-shared/std",
   "subxt/substrate-compat",
   "subxt/native",
+  "tokio/rt-multi-thread",
 ]
 wasm=[
   "entropy-shared/wasm",
