--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -69,6 +69,7 @@ async-trait      ="0.1.80"
 hostname         ="0.4"
 sha1             ="0.10.6"
 sha2             ="0.10.8"
+hkdf             ="0.12.4"
 
 [dev-dependencies]
 entropy-testing-utils={ path="../testing-utils" }
