--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -25,77 +25,78 @@ scale-info={ version="2.11", default-features=false, features=["derive"] }
 static_assertions="1.1.0"
 
 # Substrate Primitives
-sp-api                ={ version="23.0.0", default-features=false }
-sp-authority-discovery={ version="23.0.0", default-features=false }
-sp-block-builder      ={ version="23.0.0", default-features=false }
-sp-consensus-babe     ={ version="0.29.0", default-features=false }
-sp-core               ={ version="25.0.0", default-features=false }
-sp-inherents          ={ version="23.0.0", default-features=false }
-sp-io                 ={ version="27.0.0", default-features=false }
-sp-keyring            ={ version="28.0.0", default-features=false, optional=true }
-sp-npos-elections     ={ version="23.0.0", default-features=false }
-sp-offchain           ={ version="23.0.0", default-features=false }
-sp-runtime            ={ version="28.0.0", default-features=false }
-sp-session            ={ version="24.0.0", default-features=false }
-sp-staking            ={ version="23.0.0", default-features=false }
-sp-std                ={ version="12.0.0", default-features=false }
-sp-storage            ={ version="17.0.0", default-features=false, optional=true }
-sp-transaction-pool   ={ version="23.0.0", default-features=false }
-sp-version            ={ version="26.0.0", default-features=false }
+sp-api                ={ version="27.0.0", default-features=false }
+sp-authority-discovery={ version="27.0.0", default-features=false }
+sp-block-builder      ={ version="27.0.0", default-features=false }
+sp-consensus-babe     ={ version="0.33.0", default-features=false }
+sp-core               ={ version="29.0.0", default-features=false }
+sp-inherents          ={ version="27.0.0", default-features=false }
+sp-io                 ={ version="31.0.0", default-features=false }
+sp-keyring            ={ version="32.0.0", default-features=false, optional=true }
+sp-npos-elections     ={ version="27.0.0", default-features=false }
+sp-offchain           ={ version="27.0.0", default-features=false }
+sp-runtime            ={ version="32.0.0", default-features=false }
+sp-session            ={ version="28.0.0", default-features=false }
+sp-staking            ={ version="27.0.0", default-features=false }
+sp-std                ={ version="14.0.0", default-features=false }
+sp-storage            ={ version="20.0.0", default-features=false, optional=true }
+sp-transaction-pool   ={ version="27.0.0", default-features=false }
+sp-version            ={ version="30.0.0", default-features=false }
+sp-genesis-builder    ={ version="0.8.0", default-features=false }
 
 # FRAME Dependencies
-frame-benchmarking             ={ version="25.0.0", default-features=false, optional=true }
-frame-election-provider-support={ version="25.0.0", default-features=false }
-frame-executive                ={ version="25.0.0", default-features=false }
-frame-support                  ={ version="25.0.0", default-features=false }
-frame-system                   ={ version="25.0.0", default-features=false }
-frame-system-benchmarking      ={ version="25.0.0", default-features=false, optional=true }
-frame-system-rpc-runtime-api   ={ version="23.0.0", default-features=false }
-frame-try-runtime              ={ version="0.31.0", default-features=false, optional=true }
+frame-benchmarking             ={ version="29.0.0", default-features=false, optional=true }
+frame-election-provider-support={ version="29.0.0", default-features=false }
+frame-executive                ={ version="29.0.0", default-features=false }
+frame-support                  ={ version="29.0.0", default-features=false }
+frame-system                   ={ version="29.0.0", default-features=false }
+frame-system-benchmarking      ={ version="29.0.0", default-features=false, optional=true }
+frame-system-rpc-runtime-api   ={ version="27.0.0", default-features=false }
+frame-try-runtime              ={ version="0.35.0", default-features=false, optional=true }
 
 # Substrate Pallets
-pallet-assets                                ={ version="26.0.0", default-features=false }
-pallet-authority-discovery                   ={ version="25.0.0", default-features=false }
-pallet-authorship                            ={ version="25.0.0", default-features=false }
-pallet-babe                                  ={ version="25.0.0", default-features=false }
-pallet-bags-list                             ={ version="24.0.0", default-features=false }
-pallet-balances                              ={ version="25.0.0", default-features=false }
-pallet-bounties                              ={ version="24.0.0", default-features=false }
-pallet-collective                            ={ version="25.0.0", default-features=false }
-pallet-conviction-voting                     ={ version="25.0.0", default-features=false }
-pallet-democracy                             ={ version="25.0.0", default-features=false }
-pallet-election-provider-multi-phase         ={ version="24.0.0", default-features=false }
-pallet-election-provider-support-benchmarking={ version="24.0.0", default-features=false, optional=true }
-pallet-elections-phragmen                    ={ version="26.0.0", default-features=false }
-pallet-grandpa                               ={ version="25.0.0", default-features=false }
-pallet-identity                              ={ version="25.0.0", default-features=false }
-pallet-im-online                             ={ version="24.0.0", default-features=false }
-pallet-indices                               ={ version="25.0.0", default-features=false }
-pallet-membership                            ={ version="25.0.0", default-features=false }
-pallet-multisig                              ={ version="25.0.0", default-features=false }
-pallet-nomination-pools                      ={ version="22.0.2", default-features=false }
-pallet-nomination-pools-benchmarking         ={ version="23.0.0", default-features=false, optional=true }
-pallet-nomination-pools-runtime-api          ={ version="20.0.0", default-features=false }
-pallet-offences                              ={ version="24.0.0", default-features=false }
-pallet-offences-benchmarking                 ={ version="25.0.0", default-features=false, optional=true }
-pallet-preimage                              ={ version="25.0.0", default-features=false }
-pallet-proxy                                 ={ version="25.0.0", default-features=false }
-pallet-recovery                              ={ version="25.0.0", default-features=false }
-pallet-referenda                             ={ version="25.0.0", default-features=false }
-pallet-scheduler                             ={ version="26.0.0", default-features=false }
-pallet-session-benchmarking                  ={ version="25.0.0", default-features=false, optional=true }
-pallet-session                               ={ version="25.0.0", default-features=false, features=["historical"] }
-pallet-staking                               ={ version="25.0.1", default-features=false }
-pallet-staking-reward-curve                  ={ version="10.0.0", default-features=false }
-pallet-sudo                                  ={ version="25.0.0", default-features=false, optional=true }
-pallet-timestamp                             ={ version="24.0.0", default-features=false }
-pallet-tips                                  ={ version="24.0.0", default-features=false }
-pallet-transaction-payment                   ={ version="25.0.0", default-features=false }
-pallet-transaction-payment-rpc-runtime-api   ={ version="25.0.0", default-features=false }
-pallet-transaction-storage                   ={ version="24.0.0", default-features=false }
-pallet-treasury                              ={ version="24.0.0", default-features=false }
-pallet-utility                               ={ version="25.0.0", default-features=false }
-pallet-vesting                               ={ version="25.0.0", default-features=false }
+pallet-assets                                ={ version="30.0.0", default-features=false }
+pallet-authority-discovery                   ={ version="29.0.0", default-features=false }
+pallet-authorship                            ={ version="29.0.0", default-features=false }
+pallet-babe                                  ={ version="29.0.0", default-features=false }
+pallet-bags-list                             ={ version="28.0.0", default-features=false }
+pallet-balances                              ={ version="29.0.0", default-features=false }
+pallet-bounties                              ={ version="28.0.0", default-features=false }
+pallet-collective                            ={ version="29.0.0", default-features=false }
+pallet-conviction-voting                     ={ version="29.0.0", default-features=false }
+pallet-democracy                             ={ version="29.0.0", default-features=false }
+pallet-election-provider-multi-phase         ={ version="28.0.0", default-features=false }
+pallet-election-provider-support-benchmarking={ version="28.0.0", default-features=false, optional=true }
+pallet-elections-phragmen                    ={ version="30.0.0", default-features=false }
+pallet-grandpa                               ={ version="29.0.0", default-features=false }
+pallet-identity                              ={ version="29.0.0", default-features=false }
+pallet-im-online                             ={ version="28.0.0", default-features=false }
+pallet-indices                               ={ version="29.0.0", default-features=false }
+pallet-membership                            ={ version="29.0.0", default-features=false }
+pallet-multisig                              ={ version="29.0.0", default-features=false }
+pallet-nomination-pools                      ={ version="26.0.0", default-features=false }
+pallet-nomination-pools-benchmarking         ={ version="27.0.0", default-features=false, optional=true }
+pallet-nomination-pools-runtime-api          ={ version="24.0.0", default-features=false }
+pallet-offences                              ={ version="28.0.0", default-features=false }
+pallet-offences-benchmarking                 ={ version="29.0.0", default-features=false, optional=true }
+pallet-preimage                              ={ version="29.0.0", default-features=false }
+pallet-proxy                                 ={ version="29.0.0", default-features=false }
+pallet-recovery                              ={ version="29.0.0", default-features=false }
+pallet-referenda                             ={ version="29.0.0", default-features=false }
+pallet-scheduler                             ={ version="30.0.0", default-features=false }
+pallet-session-benchmarking                  ={ version="29.0.0", default-features=false, optional=true }
+pallet-session                               ={ version="29.0.0", default-features=false, features=["historical"] }
+pallet-staking                               ={ version="29.0.0", default-features=false }
+pallet-staking-reward-curve                  ={ version="11.0.0", default-features=false }
+pallet-sudo                                  ={ version="29.0.0", default-features=false, optional=true }
+pallet-timestamp                             ={ version="28.0.0", default-features=false }
+pallet-tips                                  ={ version="28.0.0", default-features=false }
+pallet-transaction-payment                   ={ version="29.0.0", default-features=false }
+pallet-transaction-payment-rpc-runtime-api   ={ version="29.0.0", default-features=false }
+pallet-transaction-storage                   ={ version="28.0.0", default-features=false }
+pallet-treasury                              ={ version="28.0.0", default-features=false }
+pallet-utility                               ={ version="29.0.0", default-features=false }
+pallet-vesting                               ={ version="29.0.0", default-features=false }
 
 # Entropy Pallets
 pallet-programs         ={ version='0.0.11', path='../pallets/programs', default-features=false }
@@ -109,7 +110,7 @@ pallet-parameters       ={ version='0.0.11', path='../pallets/parameters', defau
 entropy-shared={ path="../crates/shared", default-features=false, features=["wasm-no-std"] }
 
 [build-dependencies]
-substrate-wasm-builder={ version="14.0.0", optional=true }
+substrate-wasm-builder={ version="18.0.0", optional=true }
 
 [features]
 default=["std"]
@@ -175,6 +176,7 @@ std=[
   "sp-consensus-babe/std",
   "sp-core/std",
   "sp-inherents/std",
+  "sp-genesis-builder/std",
   "sp-io/std",
   "sp-keyring",
   "sp-npos-elections/std",
