--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,20 +17,15 @@ updates:
     # required.
     ignore:
       - dependency-name: "frame-*"
-        update-types: [ "version-update:semver-major" ]
-        update-types: [ "version-update:semver-minor" ]
+        versions: "*"
       - dependency-name: "pallet-*"
-        update-types: [ "version-update:semver-major" ]
-        update-types: [ "version-update:semver-minor" ]
+        versions: "*"
       - dependency-name: "sc-*"
-        update-types: [ "version-update:semver-major" ]
-        update-types: [ "version-update:semver-minor" ]
+        versions: "*"
       - dependency-name: "sp-*"
-        update-types: [ "version-update:semver-major" ]
-        update-types: [ "version-update:semver-minor" ]
+        versions: "*"
       - dependency-name: "substrate-*"
-        update-types: [ "version-update:semver-major" ]
-        update-types: [ "version-update:semver-minor" ]
+        versions: "*"
   - package-ecosystem: github-actions
     directory: '/'
     schedule:
