--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -84,8 +84,8 @@ frame-system                ={ version="29.0.0" }
 frame-system-rpc-runtime-api={ version="27.0.0" }
 
 # Substrate Pallets
-pallet-transaction-payment        ={ version="29.0.0" }
-pallet-transaction-payment-rpc    ={ version="31.0.0" }
+pallet-transaction-payment    ={ version="29.0.0" }
+pallet-transaction-payment-rpc={ version="31.0.0" }
 
 # Entropy Dependencies
 entropy-runtime         ={ version="0.0.11", path="../../runtime" }
@@ -94,7 +94,7 @@ pallet-registry         ={ version="0.0.11", path="../../pallets/registry" }
 pallet-staking-extension={ version="0.0.11", path="../../pallets/staking" }
 
 [build-dependencies]
-clap         ={ version="4.2.5", optional=true }
+clap={ version="4.2.5", optional=true }
 
 pallet-balances             ={ version="29.0.0" }
 substrate-build-script-utils={ version="11.0.0" }
@@ -106,12 +106,7 @@ sp-tracing={ version="16.0.0" }
 
 [features]
 default=["cli"]
-cli=[
-  "clap",
-  "frame-benchmarking-cli",
-  "sc-cli",
-  "sc-service/rocksdb",
-]
+cli=["clap", "frame-benchmarking-cli", "sc-cli", "sc-service/rocksdb"]
 runtime-benchmarks=[
   "entropy-runtime/runtime-benchmarks",
   "frame-benchmarking-cli/runtime-benchmarks",
