--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -41,6 +41,7 @@ sp-core           ={ version="31.0.0", default-features=false }
 entropy-shared  ={ path="../shared" }
 entropy-kvdb    ={ path="../kvdb", default-features=false }
 entropy-protocol={ path="../protocol", features=["server"] }
+entropy-tss-client-common={ path="../tss-client-common" }
 
 # Programs
 entropy-programs-runtime={ git="https://github.com/entropyxyz/programs.git", tag="v0.8.0" }
