--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -9,19 +9,19 @@ edition   ='2021'
 publish   =false
 
 [dependencies]
-subxt             ="0.35.3"
-sp-keyring        ="34.0.0"
-project-root      ="0.2.2"
-sp-core           ={ version="31.0.0", default-features=false }
-parity-scale-codec="3.6.9"
-lazy_static       ="1.4.0"
-hex-literal       ="0.4.1"
-tokio             ={ version="1.36", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
-axum              ={ version="0.7.5" }
-entropy-shared    ={ path="../shared" }
-entropy-kvdb      ={ path="../kvdb", default-features=false }
-entropy-tss       ={ path="../threshold-signature-server" }
-entropy-tss-client-common = {path="../tss-client-common"}
+subxt                    ="0.35.3"
+sp-keyring               ="34.0.0"
+project-root             ="0.2.2"
+sp-core                  ={ version="31.0.0", default-features=false }
+parity-scale-codec       ="3.6.9"
+lazy_static              ="1.4.0"
+hex-literal              ="0.4.1"
+tokio                    ={ version="1.36", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
+axum                     ={ version="0.7.5" }
+entropy-shared           ={ path="../shared" }
+entropy-kvdb             ={ path="../kvdb", default-features=false }
+entropy-tss              ={ path="../threshold-signature-server" }
+entropy-tss-client-common={ path="../tss-client-common" }
 
 # For test client
 anyhow          ="1.0.82"
