--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -18,7 +18,7 @@ sp-core            ={ version="31.0.0", default-features=false, features=["full_
 tokio              ={ version="1.36", features=["sync", "rt", "macros"] }
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 futures            ="0.3"
-hex                ="*"
+hex                ="0.4.3"
 blake2             ="0.10.4"
 thiserror          ="1.0.59"
 snow               ="0.9.6"
