--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -18,7 +18,7 @@ blake2             ="0.10.4"
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 rand_core          ="0.6.4"
 zeroize            ="1.5.7"
-hex                ="*"
+hex                ="0.4.3"
 reqwest-eventsource="0.6"
 serde_derive       ="1.0.147"
 synedrion          ="0.1"
