Refactor test client into new crate

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -70,19 +70,20 @@ sha2             ="0.10.8"
 hkdf             ="0.12.4"
 
 [dev-dependencies]
-entropy-testing-utils={ path="../testing-utils" }
-serial_test          ="3.1.0"
-hex-literal          ="0.4.1"
-project-root         ="0.2.2"
-sp-keyring           ="34.0.0"
-more-asserts         ="0.3.1"
-template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
-lazy_static          ="1.4.0"
-entropy-protocol     ={ path="../protocol", features=["unsafe"] }
-blake3               ="1.5.1"
-ethers-core          ="2.0.14"
-schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
-schemars             ={ version="0.8.16" }
+entropy-testing-utils    ={ path="../testing-utils" }
+serial_test              ="3.1.0"
+hex-literal              ="0.4.1"
+project-root             ="0.2.2"
+sp-keyring               ="34.0.0"
+more-asserts             ="0.3.1"
+template-barebones       ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
+lazy_static              ="1.4.0"
+entropy-protocol         ={ path="../protocol", features=["unsafe"] }
+blake3                   ="1.5.1"
+ethers-core              ="2.0.14"
+schnorrkel               ={ version="0.11.4", default-features=false, features=["std"] }
+schemars                 ={ version="0.8.16" }
+entropy-tss-client-common={ path="../tss-client-common", features=["client"] }
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
