--- a/crates/test-cli/Cargo.toml
+++ b/crates/test-cli/Cargo.toml
@@ -8,15 +8,15 @@ repository='https://github.com/entropyxyz/entropy-core'
 edition   ='2021'
 
 [dependencies]
-entropy-tss-client-common = { path="../tss-client-common", features = ["client"]}
-entropy-testing-utils = { path="../testing-utils"}
-clap                 ={ version="4.4.6", features=["derive"] }
-colored              ="2.0.4"
-subxt                ="0.35.3"
-sp-core              ="31.0.0"
-anyhow               ="1.0.82"
-tokio                ={ version="1.16", features=["macros", "rt-multi-thread", "io-util", "process"] }
-hex                  ="0.4.3"
-bincode              ="1.3.3"
-x25519-dalek         ="2.0.1"
-sp-runtime           ={ version="32.0.0", default-features=false }
+entropy-tss-client-common={ path="../tss-client-common", features=["client"] }
+entropy-testing-utils    ={ path="../testing-utils" }
+clap                     ={ version="4.4.6", features=["derive"] }
+colored                  ="2.0.4"
+subxt                    ="0.35.3"
+sp-core                  ="31.0.0"
+anyhow                   ="1.0.82"
+tokio                    ={ version="1.16", features=["macros", "rt-multi-thread", "io-util", "process"] }
+hex                      ="0.4.3"
+bincode                  ="1.3.3"
+x25519-dalek             ="2.0.1"
+sp-runtime               ={ version="32.0.0", default-features=false }
