--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -47,6 +47,8 @@ schnorrkel          ={ version="0.11.4", default-features=false, features=["std"
 
 [dev-dependencies]
 sp-keyring="34.0.0"
+anyhow    ="1.0.82"
+num_cpus  ="1.16.0"
 
 [features]
 default=["server"]
@@ -57,6 +59,7 @@ server=[
   "entropy-shared/std",
   "subxt/substrate-compat",
   "subxt/native",
+  "tokio/rt-multi-thread",
 ]
 wasm=[
   "entropy-shared/wasm",
