Make client feature flag default, doccomments

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -38,10 +38,12 @@ parity-scale-codec="3.6.9"
 sp-core           ={ version="31.0.0", default-features=false }
 
 # Entropy
-entropy-shared           ={ path="../shared" }
-entropy-kvdb             ={ path="../kvdb", default-features=false }
-entropy-protocol         ={ path="../protocol", features=["server"] }
-entropy-tss-client-common={ path="../tss-client-common" }
+entropy-shared={ path="../shared" }
+entropy-kvdb={ path="../kvdb", default-features=false }
+entropy-protocol={ path="../protocol", features=["server"] }
+entropy-tss-client-common={ path="../tss-client-common", default-features=false, features=[
+  "native",
+] }
 
 # Programs
 entropy-programs-runtime={ git="https://github.com/entropyxyz/programs.git", tag="v0.8.0" }
