--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name       ="entropy-client"
+name       ="entropy-tss-client-common"
 version    ="0.0.1"
 edition    ="2021"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
-description='A simple client for the Entropy chain node and Entropy TSS server'
+description='Common functionality needed by both entropy-tss and an entropy client'
 license    ='AGPL-3.0-or-later'
 repository ='https://github.com/entropyxyz/entropy-core'
 
@@ -19,7 +19,7 @@ futures       ="0.3"
 sp-core       ={ version="31.0.0", default-features=false, features=["full_crypto", "serde"] }
 tracing       ="0.1.37"
 
-# Only present when the "client" feature is active
+# For test client
 anyhow          ={ version="1.0.82", optional=true }
 blake2          ={ version="0.10.4", optional=true }
 rand_core       ={ version="0.6.4", optional=true }
@@ -40,6 +40,7 @@ native=[
   "subxt/substrate-compat",
 ]
 wasm=["entropy-shared/wasm", "entropy-shared/user-wasm", "subxt/web"]
+
 # This adds full client functionality. It is behind a feature flag because it is not needed by
 # entropy-tss
 client=[
