--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name       ="entropy-tss-client-common"
+name       ="entropy-client"
 version    ="0.0.1"
 edition    ="2021"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
@@ -19,7 +19,7 @@ futures       ="0.3"
 sp-core       ={ version="31.0.0", default-features=false, features=["full_crypto", "serde"] }
 tracing       ="0.1.37"
 
-# For test client
+# Present when "client" feature is active
 anyhow          ={ version="1.0.82", optional=true }
 blake2          ={ version="0.10.4", optional=true }
 rand_core       ={ version="0.6.4", optional=true }
