--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -19,7 +19,7 @@ futures       ="0.3"
 sp-core       ={ version="31.0.0", default-features=false, features=["full_crypto", "serde"] }
 tracing       ="0.1.37"
 
-# Present when "client" feature is active
+# Present when "full-client" feature is active
 anyhow          ={ version="1.0.82", optional=true }
 blake2          ={ version="0.10.4", optional=true }
 rand_core       ={ version="0.6.4", optional=true }
@@ -32,7 +32,7 @@ synedrion       ={ version="0.1", optional=true }
 hex             ={ version="0.4.3", optional=true }
 
 [features]
-default=["native", "client"]
+default=["native", "full-client"]
 native=[
   "entropy-shared/std",
   "entropy-shared/user-native",
@@ -43,7 +43,7 @@ wasm=["entropy-shared/wasm", "entropy-shared/user-wasm", "subxt/web"]
 
 # This adds full client functionality. It is behind a feature flag because it is not needed by
 # entropy-tss
-client=[
+full-client=[
   "dep:anyhow",
   "dep:blake2",
   "dep:rand_core",
