--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -83,7 +83,7 @@ blake3               ="1.5.1"
 ethers-core          ="2.0.14"
 schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
 schemars             ={ version="0.8.16" }
-entropy-client       ={ path="../client", features=["client"] }
+entropy-client       ={ path="../client", features=["full-client"] }
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
