--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -43,8 +43,7 @@ entropy-kvdb    ={ path="../kvdb", default-features=false }
 entropy-protocol={ path="../protocol", features=["server"] }
 
 # Programs
-entropy-programs-runtime= { package = "entropy-programs-runtime", git="https://github.com/entropyxyz/programs.git", branch="add-oracle-data-to-runtime" }
-
+entropy-programs-runtime="0.10.0"
 
 # Logging
 tracing                 ="0.1.37"
