--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -10,7 +10,7 @@ edition    ='2021'
 
 [dependencies]
 async-trait        ="0.1.80"
-entropy-shared     ={ path="../shared", default-features=false }
+entropy-shared     ={ version="0.1.0", path="../shared", default-features=false }
 synedrion          ="0.1"
 serde              ={ version="1.0", features=["derive"], default-features=false }
 subxt              ={ version="0.35.3", default-features=false }
