--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name      ="entropy-testing-utils"
-version   ='0.0.11'
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-edition   ='2021'
-publish   =false
+name       ="entropy-testing-utils"
+description="Utiliites for testing the Entropy Threshold Signature Server"
+version    ='0.1.0'
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
+publish    =false
 
 [dependencies]
 subxt             ="0.35.3"
