--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       ="entropy-tss"
-version    ="0.1.0"
+version    ="0.0.12"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
 description='Entropy threshold signature scheme (TSS) server'
@@ -17,7 +17,7 @@ thiserror          ="1.0.59"
 blake2             ="0.10.4"
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 rand_core          ="0.6.4"
-zeroize            ="1.8.0"
+zeroize            ="1.7.0"
 hex                ="0.4.3"
 reqwest-eventsource="0.6"
 serde_derive       ="1.0.147"
@@ -38,9 +38,9 @@ parity-scale-codec="3.6.9"
 sp-core           ={ version="31.0.0", default-features=false }
 
 # Entropy
-entropy-shared  ={ path="../shared" }
-entropy-kvdb    ={ path="../kvdb", default-features=false }
-entropy-protocol={ path="../protocol", features=["server"] }
+entropy-shared  ={ version="0.0.12", path="../shared" }
+entropy-kvdb    ={ version="0.0.12", path="../kvdb", default-features=false }
+entropy-protocol={ version="0.0.12", path="../protocol", features=["server"] }
 
 # Programs
 entropy-programs-runtime="0.9.0"
