--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name      ='entropy-runtime'
-version   ='0.0.11'
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-build     ='build.rs'
-edition   ='2021'
-publish   =false
+name       ='entropy-runtime'
+description="The substrate runtime for the Entropy chain node"
+version    ='0.0.11'
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+build      ='build.rs'
+edition    ='2021'
+publish    =false
 
 [package.metadata.docs.rs]
 targets=["x86_64-unknown-linux-gnu"]
