--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -19,9 +19,9 @@ lazy_static       ="1.4.0"
 hex-literal       ="0.4.1"
 tokio             ={ version="1.36", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
 axum              ={ version="0.7.5" }
-entropy-shared    ={ path="../shared" }
-entropy-kvdb      ={ path="../kvdb", default-features=false }
-entropy-tss       ={ path="../threshold-signature-server" }
+entropy-shared    ={ version="0.0.12", path="../shared" }
+entropy-kvdb      ={ version="0.0.12", path="../kvdb", default-features=false }
+entropy-tss       ={ version="0.0.12", path="../threshold-signature-server" }
 
 # For test client
 anyhow          ="1.0.82"
@@ -34,7 +34,7 @@ serde_json      ="1.0"
 thiserror       ="1.0.59"
 x25519-dalek    ={ version="2.0.1", features=["static_secrets"] }
 zeroize         ="1.7.0"
-entropy-protocol={ path="../protocol" }
+entropy-protocol={ version="0.0.12", path="../protocol" }
 reqwest         ={ version="0.12.4", features=["json", "stream"] }
 sha3            ="0.10.8"
 base64          ="0.22.0"
