Make common crate for TSS and test client (#775)
* Make common crates for tss and test client

* Error handling

* Update tests following refactor

* Taplo

* Update cargo deny config

* Update wasm test

* Fix so that the client common crate compiles to wasm

* Fix feature flags for entropy-shared

* Refactor test client into new crate

* Update test CLI

* Taplo

* Fix feature flags for entropy-shared for building entropy-protocol on wasm

* Make client feature flag default, doccomments

* Rename crate

* Update update metadata script

* Comments

* Update itegration tests

* Refactor

* Rename feature flag

* Update crate description

* Rename feature flag

* Minor edit to doccomment

* Doccomment

* Tidy

* Fix tss test

* Update deny.toml

* Changelog

* Fix lockfile

* Set client version number to 0.0.11

--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -57,12 +57,14 @@ server=[
   "dep:axum",
   "dep:tokio-tungstenite",
   "entropy-shared/std",
+  "entropy-shared/user-native",
   "subxt/substrate-compat",
   "subxt/native",
   "tokio/rt-multi-thread",
 ]
 wasm=[
   "entropy-shared/wasm",
+  "entropy-shared/user-wasm",
   "dep:gloo-net",
   "dep:wasm-bindgen-futures",
   "dep:wasm-bindgen",
