--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -41,6 +41,7 @@ sp-core           ={ version="31.0.0", default-features=false }
 entropy-shared  ={ path="../shared" }
 entropy-kvdb    ={ path="../kvdb", default-features=false }
 entropy-protocol={ path="../protocol", features=["server"] }
+entropy-client  ={ path="../client", default-features=false, features=["native"] }
 
 # Programs
 entropy-programs-runtime="0.10.0"
@@ -81,6 +82,7 @@ entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 blake3               ="1.5.1"
 ethers-core          ="2.0.14"
 schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
+entropy-client       ={ path="../client", features=["full-client"] }
 schemars             ={ version="0.8.17" }
 
 [build-dependencies]
