--- a/crates/test-cli/Cargo.toml
+++ b/crates/test-cli/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name      ="entropy-test-cli"
-version   ='0.0.1'
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-edition   ='2021'
+name       ="entropy-test-cli"
+description="Simple command line interface client for testing Entropy"
+version    ='0.0.12'
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
 
 [dependencies]
-entropy-client       ={ path="../client" }
-entropy-testing-utils={ path="../testing-utils" }
+entropy-testing-utils={ version="0.0.12", path="../testing-utils" }
+entropy-client       ={ version="0.0.12", path="../client" }
 clap                 ={ version="4.4.6", features=["derive"] }
 colored              ="2.0.4"
 subxt                ="0.35.3"
