--- a/crates/kvdb/Cargo.toml
+++ b/crates/kvdb/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name      ="entropy-kvdb"
-version   ="0.1.0"
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-edition   ='2021'
+name       ="entropy-kvdb"
+description="Encrypted key-value database for the Entropy Theshold Signing Server"
+version    ="0.0.12"
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
 
 [dependencies]
 # Common
@@ -18,7 +19,7 @@ hex      ="0.4.3"
 sp-core={ version="31.0.0", default-features=false }
 
 # Crypto
-zeroize         ={ version="1.8", features=["zeroize_derive"], default-features=false }
+zeroize         ={ version="1.7", features=["zeroize_derive"], default-features=false }
 rpassword       ={ version="7.3.1", default-features=false }
 scrypt          ={ version="0.11.0", default-features=false, features=["std"] }
 chacha20poly1305={ version="0.9", features=["alloc"], default-features=false }
@@ -31,7 +32,7 @@ tracing={ version="0.1", default-features=false }
 # Misc
 sled            ="0.34.7"
 bincode         ="1.3.3"
-entropy-protocol={ path="../protocol" }
+entropy-protocol={ version="0.0.12", path="../protocol" }
 
 [dev-dependencies]
 serial_test="3.1.1"
