--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       ='entropy-protocol'
-version    ='0.1.0'
+version    ='0.0.12'
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 description="Entropy Signing and DKG protocol execution and transport logic"
 homepage   ='https://entropy.xyz/'
@@ -10,7 +10,7 @@ edition    ='2021'
 
 [dependencies]
 async-trait        ="0.1.80"
-entropy-shared     ={ path="../shared", default-features=false }
+entropy-shared     ={ version="0.0.12", path="../shared", default-features=false }
 synedrion          ="0.1"
 serde              ={ version="1.0", features=["derive"], default-features=false }
 subxt              ={ version="0.35.3", default-features=false }
@@ -27,7 +27,7 @@ rand_core          ={ version="0.6.4", features=["getrandom"] }
 tracing            ="0.1.37"
 bincode            ="1.3.3"
 serde_json         ="1.0"
-zeroize            ="1.8.0"
+zeroize            ="1.7.0"
 hpke-rs            ="0.2.0"
 hpke-rs-crypto     ="0.2.0"
 hpke-rs-rust-crypto="0.2.0"
