--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name      ="entropy-shared"
-version   ="0.1.0"
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-edition   ='2021'
+name       ="entropy-shared"
+description="Shared types used by the Entropy chain node and Entropy Threshold Signing Server"
+version    ="0.0.12"
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
 
 [dependencies]
 codec       ={ package="parity-scale-codec", version="3.0.0", default-features=false }
