--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name      ="entropy-testing-utils"
-version   ='0.0.11'
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-edition   ='2021'
-publish   =false
+name       ="entropy-testing-utils"
+description="Utiliites for testing the Entropy Threshold Signature Server"
+version    ='0.0.12'
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
+publish    =false
 
 [dependencies]
 subxt             ="0.35.3"
@@ -18,10 +19,10 @@ lazy_static       ="1.4.0"
 hex-literal       ="0.4.1"
 tokio             ={ version="1.36", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
 axum              ={ version="0.7.5" }
-entropy-shared    ={ path="../shared" }
-entropy-kvdb      ={ path="../kvdb", default-features=false }
-entropy-tss       ={ path="../threshold-signature-server" }
-entropy-protocol  ={ path="../protocol" }
+entropy-shared    ={ version="0.0.12", path="../shared" }
+entropy-kvdb      ={ version="0.0.12", path="../kvdb", default-features=false }
+entropy-tss       ={ version="0.0.12", path="../threshold-signature-server" }
+entropy-protocol  ={ version="0.0.12", path="../protocol" }
 synedrion         ="0.1"
 hex               ="0.4.3"
 rand_core         ="0.6.4"
