--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       ="entropy-tss"
-version    ="0.1.0"
+version    ="0.0.12"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
 description='Entropy threshold signature scheme (TSS) server'
@@ -17,7 +17,7 @@ thiserror          ="1.0.59"
 blake2             ="0.10.4"
 x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
 rand_core          ="0.6.4"
-zeroize            ="1.8.0"
+zeroize            ="1.7.0"
 hex                ="0.4.3"
 reqwest-eventsource="0.6"
 serde_derive       ="1.0.147"
@@ -38,10 +38,10 @@ parity-scale-codec="3.6.9"
 sp-core           ={ version="31.0.0", default-features=false }
 
 # Entropy
-entropy-shared  ={ path="../shared" }
-entropy-kvdb    ={ path="../kvdb", default-features=false }
-entropy-protocol={ path="../protocol", features=["server"] }
-entropy-client  ={ path="../client", default-features=false, features=["native"] }
+entropy-shared  ={ version="0.0.12", path="../shared" }
+entropy-kvdb    ={ version="0.0.12", path="../kvdb", default-features=false }
+entropy-protocol={ version="0.0.12", path="../protocol", features=["server"] }
+entropy-client  ={ version="0.0.12", path="../client", default-features=false, features=["native"] }
 
 # Programs
 entropy-programs-runtime="0.10.0"
@@ -70,7 +70,7 @@ sha2             ="0.10.8"
 hkdf             ="0.12.4"
 
 [dev-dependencies]
-entropy-testing-utils={ path="../testing-utils" }
+entropy-testing-utils={ version="0.0.12", path="../testing-utils" }
 serial_test          ="3.1.1"
 hex-literal          ="0.4.1"
 project-root         ="0.2.2"
@@ -78,7 +78,7 @@ sp-keyring           ="34.0.0"
 more-asserts         ="0.3.1"
 template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
 lazy_static          ="1.4.0"
-entropy-protocol     ={ path="../protocol", features=["unsafe"] }
+entropy-protocol     ={ version="0.0.12", path="../protocol", features=["unsafe"] }
 blake3               ="1.5.1"
 ethers-core          ="2.0.14"
 schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
