--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name      ='entropy'
-version   ='0.0.11'
-authors   =['Entropy Cryptography <engineering@entropy.xyz>']
-homepage  ='https://entropy.xyz/'
-license   ='AGPL-3.0-or-later'
-repository='https://github.com/entropyxyz/entropy-core'
-build     ='build.rs'
-edition   ='2021'
-publish   =false
+name       ='entropy'
+version    ='0.0.12'
+description="Entropy substrate node"
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+build      ='build.rs'
+edition    ='2021'
+publish    =false
 
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
@@ -88,11 +89,13 @@ pallet-transaction-payment    ={ version="29.0.0" }
 pallet-transaction-payment-rpc={ version="31.0.0" }
 
 # Entropy Dependencies
-entropy-runtime         ={ version="0.0.11", path="../../runtime" }
-entropy-shared          ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-pallet-registry         ={ version="0.0.11", path="../../pallets/registry" }
-pallet-staking-extension={ version="0.0.11", path="../../pallets/staking" }
-project-root            ="0.2.2"
+entropy-runtime={ version="0.0.12", path="../../runtime" }
+entropy-shared={ version="0.0.12", path="../../crates/shared", default-features=false, features=[
+  "wasm-no-std",
+] }
+pallet-registry={ version="0.0.12", path="../../pallets/registry" }
+pallet-staking-extension={ version="0.0.12", path="../../pallets/staking" }
+project-root="0.2.2"
 
 [build-dependencies]
 clap={ version="4.2.5", optional=true }
