--- a/pallets/registry/Cargo.toml
+++ b/pallets/registry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name      ='pallet-registry'
-version   ='0.0.12'
+version   ='0.1.0-rc.1'
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
 license   ='AGPL-3.0-or-later'
@@ -26,11 +26,11 @@ sp-core           ={ version="29.0.0", default-features=false }
 sp-runtime        ={ version="32.0.0", default-features=false }
 sp-std            ={ version="14.0.0", default-features=false }
 
-entropy-shared={ version="0.0.12", path="../../crates/shared", features=[
+entropy-shared={ version="0.1.0-rc.1", path="../../crates/shared", features=[
   "wasm-no-std",
 ], default-features=false }
-pallet-programs={ version="0.0.12", path="../programs", default-features=false }
-pallet-staking-extension={ version="0.0.12", path="../staking", default-features=false }
+pallet-programs={ version="0.1.0-rc.1", path="../programs", default-features=false }
+pallet-staking-extension={ version="0.1.0-rc.1", path="../staking", default-features=false }
 
 [dev-dependencies]
 frame-election-provider-support={ version="29.0.0", default-features=false }
