Fixes for publishing `entropy-tss` and `entropy-testing-utils` (#837)
* Remove dev-dependecy versions for `entropy-tss`

* Allow publishing the `testing-utils` crate

* Fix typo

* Improve cyclical dependency explanation text

* TaploFmt

* Allow `entropy-testing-utils` in license checks

--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name       ="entropy-testing-utils"
-description="Utiliites for testing the Entropy Threshold Signature Server"
+description="Utilities for testing the Entropy Threshold Signature Server"
 version    ='0.1.0-rc.1'
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
 license    ='AGPL-3.0-or-later'
 repository ='https://github.com/entropyxyz/entropy-core'
 edition    ='2021'
-publish    =false
 
 [dependencies]
 subxt             ="0.35.3"
