t of n key generation and signing at the `entropy-protocol` level  (#868)
* Update our DKG protocol to internally run key init, reshare, and auxgen

* Allow threshold to be passed into DKG fn

* Update entropy-tss for new DKG api

* Try various things to figure out why the tests pass locally but not in CI

* Rm logging

* Update for full t of n signing test

* Lockfile

* Update signing client protocol execution

* Run tests in serial

* Taplo

* Clippy

* Error handling when selecting DKG committee

* Error handling for DKG protocols

* Logging

* Comments

* Error handling for DKG protocols

* Always run t-of-n test with minimum 3 parties even when running with only 2 cores

* Only run t of n test with 3 parties

* Rm comment

* Rm panic

* Typo

Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

* Improve doccomment

Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

* Fix typo

* Rename enum for protocol message payload

* Add threshold to logged fields in tracing macro

* Final changes from doccomments

---------

Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -31,6 +31,7 @@ zeroize            ="1.7.0"
 hpke-rs            ="0.2.0"
 hpke-rs-crypto     ="0.2.0"
 hpke-rs-rust-crypto="0.2.0"
+num                ="0.4.3"
 
 # Used only with the `server` feature to implement the WsConnection trait
 axum             ={ version="0.7.5", features=["ws"], optional=true }
@@ -46,9 +47,10 @@ base64              ={ version="0.22.1", optional=true }
 schnorrkel          ={ version="0.11.4", default-features=false, features=["std"], optional=true }
 
 [dev-dependencies]
-sp-keyring="34.0.0"
-anyhow    ="1.0.86"
-num_cpus  ="1.16.0"
+serial_test="3.1.1"
+sp-keyring ="34.0.0"
+anyhow     ="1.0.86"
+num_cpus   ="1.16.0"
 
 [features]
 default=["server"]
